Добавляет навигационную панель

--- a/index.html
+++ b/index.html
@@ -6,9 +6,27 @@
     <title>Document</title>
 </head>
 <body>
-    <ul><li></li>
-    <li>1</li>
-    <li>2</li>
-    <li>3</li></ul>
+    <header class="headline">
+        <nav>
+            <a href="/">
+                <span class="firts-blue-letter">Web</span>Studio
+            </a>
+            <ul>
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body> 
 </html>
