--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <!--Тренируюсь присваивать классы. Пока оставлю несколько-->
     <header class="headline">
-        <nav>
-            <a href="/">
+        <nav class="work-link">
+            <a href="/" class="Mainword">
                 <span class="firts-blue-letter">Web</span>Studio
             </a>
             <ul>
@@ -18,15 +19,75 @@
             </ul>
             <ul>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+                <li><a href="tel:+380961111111">+380961111111</a></li>
             </ul>
         </nav>
     </header>
     <main>
-
+        <section>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <a href="">Заказать услугу</a>
+        </section>
+        <section>
+            <h2>Компетентность</h2>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li><img src="./images/box1.png" alt="Computer"></li>
+                <li><img src="./images/box2.png" alt="Phone"></li>
+                <li><img src="./images/box3.png" alt="Tablet"></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./images/Igor.png" alt="Igor">
+                    <h3>Игорь Демьяненко</h3>
+                    <span>Product Designer</span>
+                </li>
+                <li>
+                    <img src="./images/Olga.png" alt="Olga">
+                    <h3>Ольга Репина</h3>
+                    <span>Frontend Developer</span>
+                </li>
+                <li>
+                    <img src="./images/Nikolay.png" alt="Nikolay">
+                    <h3>Николай Тарасов</h3>
+                    <span>Marketing</span>
+                </li>
+                <li>
+                    <img src="./images/Mikhailo.png" alt="Mikhailo">
+                    <h3>Михаил Ермаков</h3>
+                    <span>UI Designer</span>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer>
-
+        <a href="#"><span>Web</span>studio</a>
+        <address>г.Киев, пр-т Леси Украинки, 26</address>
+        <a href="mailto:info@example.com">info@example.com</a><br>
+        <a href="tel:+380991111111">+38 099 111 11 11</a>
     </footer>
 </body> 
 </html>
