--- a/index.html
+++ b/index.html
@@ -52,31 +52,31 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./images/box1.png" alt="Computer"></li>
-                <li><img src="./images/box2.png" alt="Phone"></li>
-                <li><img src="./images/box3.png" alt="Tablet"></li>
+                <li><img src="./images/box1.png" alt="Computer" width="370"></li>
+                <li><img src="./images/box2.png" alt="Phone" width="370"></li>
+                <li><img src="./images/box3.png" alt="Tablet" width="370"></li>
             </ul>
         </section>
         <section>
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/Igor.png" alt="Igor">
+                    <img src="./images/Igor.png" alt="Igor" width="270">
                     <h3>Игорь Демьяненко</h3>
                     <span>Product Designer</span>
                 </li>
                 <li>
-                    <img src="./images/Olga.png" alt="Olga">
+                    <img src="./images/Olga.png" alt="Olga" width="270">
                     <h3>Ольга Репина</h3>
                     <span>Frontend Developer</span>
                 </li>
                 <li>
-                    <img src="./images/Nikolay.png" alt="Nikolay">
+                    <img src="./images/Nikolay.png" alt="Nikolay" width="270">
                     <h3>Николай Тарасов</h3>
                     <span>Marketing</span>
                 </li>
                 <li>
-                    <img src="./images/Mikhailo.png" alt="Mikhailo">
+                    <img src="./images/Mikhailo.png" alt="Mikhailo" width="270">
                     <h3>Михаил Ермаков</h3>
                     <span>UI Designer</span>
                 </li>
