--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -68,17 +68,17 @@
                 <li>
                     <img src="./images/Olga.png" alt="Olga" width="270">
                     <h3>Ольга Репина</h3>
-                    <span>Frontend Developer</span>
+                    <p>Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/Nikolay.png" alt="Nikolay" width="270">
                     <h3>Николай Тарасов</h3>
-                    <span>Marketing</span>
+                    <p>Marketing</p>
                 </li>
                 <li>
                     <img src="./images/Mikhailo.png" alt="Mikhailo" width="270">
                     <h3>Михаил Ермаков</h3>
-                    <span>UI Designer</span>
+                    <p>UI Designer</p>
                 </li>
             </ul>
         </section>
